Melhorando layout em telas desktop e o contador

--- a/source/index.html
+++ b/source/index.html
@@ -53,7 +53,7 @@
         </section>
 
         <section class="partyEvent">
-            <div class="container" data-aos="fade-up" data-aos-duration="2500">
+            <div class="container container--reverse" data-aos="fade-up" data-aos-duration="2500">
                 <img class="partyEvent__image" src="./images/decoration.jpg">
                 <div class="partyEvent__content">
                     <h3 class="partyEvent__content__title">Decoração & Brindes</h3>
